[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "neon-py"
authors = [{name = "Pavel Dedik", email = "dedikx@gmail.com"}]
license = {text = "BSD"}
description = "NEON parser for Python"
readme = "README.md"
keywords = ["neon", "parser", "config file"]
classifiers = [
    "Programming Language :: Python",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
urls = {Homepage = "https://github.com/paveldedik/neon-py"}
dependencies = ["python-dateutil", "more-itertools"]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest"]
testing = ["pytest"]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests"]
namespaces = false

[tool.setuptools_scm]
write_to = "neon/version.py"

[tool.black]
target_version = ["py39"]

[tool.isort]
# config compatible with Black
profile = "black"
line_length = 100
default_section = "THIRDPARTY"
include_trailing_comma = true
known_first_party = "neon"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = pylint,py{37,38,39}

[testenv]
deps = .[test]
commands = pytest {posargs:}
"""
