[metadata]
name = neon-py
author = Pavel Dedik
author_email = dedikx@gmail.com
license = BSD
description = NEON parser for Python
keywords = neon, parser, config file
url = https://github.com/paveldedik/neon-py
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python
    Operating System :: OS Independent
    Topic :: Utilities
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
zip_safe = False
install_requires = python-dateutil; more-itertools
include_package_data = True
tests_require = pytest

[options.packages.find]
exclude = tests

[options.extras_require]
test = pytest
